adding paragrph and titles tags

--- a/test.html
+++ b/test.html
@@ -1,1 +1,17 @@
-bonjour formalab
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>titre</title>
+    </head>
+    <body>
+    <P>hello formalab
+        <h1>titre trés important</h1>
+            <h2>titre important</h2>
+            <H3>TITRE UN PEU MOINS important</H3>
+
+       
+    </P>
+
+    </body>
+</html>
