--- a/test.html
+++ b/test.html
@@ -23,6 +23,7 @@
           <li>cerises</li>
       </ul>
       <a href="https://formalab.tn" target="_blank">formalab</a>
+      <a href="test2.html" target="_blank">page2</a>
     </P>
 
     </body>
