adding a new audio

--- a/test.html
+++ b/test.html
@@ -24,6 +24,8 @@
       </ul>
       <a href="https://formalab.tn" target="_blank">formalab</a>
       <a href="test2.html" target="_blank">page2</a>
+
+      <img src="cat.jpg" alt="photo off a cat":>
     </P>
 
     </body>
